# ovhapi

./: pyproject.toml
ovhapi/: deps.py  exceptions.py  log.py  main.py
ovhapi/core/: config.py
ovhapi/models/: __init__.py
ovhapi/openstack_helper/: __init__.py
ovhapi/routers/: mon.py  region.py  server.py
tests/: conftest.py
tests/e2e/: test_api.py
